; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_uiDateTimePickerSetTime.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_uiDateTimePickerSetTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiDateTimePickerSetTime(%struct.TYPE_3__* %0, %struct.tm* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.tm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.tm, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.tm* %1, %struct.tm** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @g_signal_handler_block(i32 %9, i32 %12)
  %14 = load %struct.tm*, %struct.tm** %4, align 8
  %15 = call i32 @memcpy(%struct.tm* %6, %struct.tm* %14, i32 4)
  %16 = call i32 @mktime(%struct.tm* %6)
  store i32 %16, i32* %5, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @g_date_time_new_from_unix_local(i32 %20)
  %22 = call i32 @uiprivDateTimePickerWidget_setTime(i32 %19, i32 %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @dateTimeChanged(i32 %25)
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @g_signal_handler_unblock(i32 %29, i32 %32)
  ret void
}

declare dso_local i32 @g_signal_handler_block(i32, i32) #1

declare dso_local i32 @memcpy(%struct.tm*, %struct.tm*, i32) #1

declare dso_local i32 @mktime(%struct.tm*) #1

declare dso_local i32 @uiprivDateTimePickerWidget_setTime(i32, i32) #1

declare dso_local i32 @g_date_time_new_from_unix_local(i32) #1

declare dso_local i32 @dateTimeChanged(i32) #1

declare dso_local i32 @g_signal_handler_unblock(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
